# sokki

./: CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  RELEASE.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/: App.css  App.tsx  main.tsx  repo.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  shortcut_manager.rs  shortcuts.rs  tray.rs  window.rs
src/components/: Editor.tsx  QuickSettings.tsx  Settings.tsx  TabBar.tsx  TabItem.tsx  ThemeMenu.tsx  Tooltip.tsx
src/lib/commands/: app-commands.ts  tauri-commands.ts
src/services/: repo.ts  store.ts
src/styles/: base.css  colors.css  components.css  layout.css  settings.css
src/theme/: ThemeContext.tsx  tokens.css
src/theme/__tests__/: ThemeContext.test.tsx
src/types/: index.ts
src/utils/: debounce.ts  previewTooltip.ts  shortcut.ts
