[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "blink-note"
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "2", features = []}

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tauri = {version = "2", features = ["macos-private-api", "tray-icon", "image-png"]}
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
