[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "sokki"
version = "0.2.0"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
icrate = { version = "0.1.2", features = ["AppKit"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
window-vibrancy = "0.7.1"
